--- a/common/css/style.css
+++ b/common/css/style.css
@@ -23,37 +23,30 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-  display: block;
-}
+  display: block; }
 
 body {
-  line-height: 1;
-}
+  line-height: 1; }
 
 ol, ul {
-  list-style: none;
-}
+  list-style: none; }
 
 blockquote, q {
-  quotes: none;
-}
+  quotes: none; }
 
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
-  content: none;
-}
+  content: none; }
 
 table {
   border-collapse: collapse;
-  border-spacing: 0;
-}
+  border-spacing: 0; }
 
 body {
   color: #555;
@@ -62,24 +55,19 @@ body {
   font-weight: normal;
   margin: 0;
   padding: 0;
-  position: relative;
-}
+  position: relative; }
 
 a {
   color: #555;
   text-decoration: none;
   -webkit-transition: 0.3s ease-in-out all;
   -o-transition: 0.3s ease-in-out all;
-  transition: 0.3s ease-in-out all;
-}
-
-a:hover {
-  color: #ccc;
-}
+  transition: 0.3s ease-in-out all; }
+  a:hover {
+    color: #ccc; }
 
 img {
-  max-width: 100%;
-}
+  max-width: 100%; }
 
 h3 {
   font-family: 'Open Sans',sans-serif;
@@ -87,180 +75,127 @@ h3 {
   letter-spacing: 4px;
   padding-right: 110px;
   position: relative;
-  display: inline-block;
-}
-
-h3:before {
-  content: '';
-  width: 100px;
-  height: 1px;
-  margin: auto;
-  background: #555;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-}
-
-.l-header {
-  font-family: 'Open Sans', sans-serif;
-  width: 94%;
-  margin: auto;
-}
-
-@media screen and (max-width: 767px) {
-  .l-header {
-    width: 90%;
-  }
-}
-
-.l-header h1 img {
-  width: 75px;
-}
-
-.p-headercontents {
-  font-size: 16px;
-  padding: 32px 0 24px;
-}
-
-@media screen and (max-width: 900px) {
-  .p-headercontents {
-    font-size: 14px;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  .p-headercontents {
-    padding: 24px 0 16px;
-  }
-}
-
-.p-headercontents.u-flex {
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-}
-
-@media screen and (max-width: 767px) {
-  .p-headercontents.u-flex {
-    display: block;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .p-headermenu.u-flex {
-    display: block;
-  }
-}
-
-.p-headermenu li {
-  padding: 0 24px;
-}
-
-.p-headermenu li a {
-  position: relative;
-  display: block;
-}
-
-@media screen and (max-width: 767px) {
-  .p-headermenu li a {
-    font-size: 16px;
-    padding: 20px 0 20px 30px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .p-headermenu li a:before {
+  display: inline-block; }
+  h3:before {
     content: '';
-    width: 20px;
+    width: 100px;
     height: 1px;
     margin: auto;
     background: #555;
     position: absolute;
     top: 0;
     bottom: 0;
-    left: 0;
-  }
-}
+    right: 0; }
+
+.l-header {
+  font-family: 'Open Sans', sans-serif;
+  width: 94%;
+  margin: auto; }
+  @media screen and (max-width: 767px) {
+    .l-header {
+      width: 90%; } }
+  .l-header h1 img {
+    width: 75px; }
+
+.p-headercontents {
+  font-size: 16px;
+  padding: 32px 0 24px; }
+  @media screen and (max-width: 900px) {
+    .p-headercontents {
+      font-size: 14px; } }
+  @media screen and (max-width: 900px) {
+    .p-headercontents {
+      padding: 24px 0 16px; } }
+  .p-headercontents.u-flex {
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+    @media screen and (max-width: 767px) {
+      .p-headercontents.u-flex {
+        display: block; } }
+
+@media screen and (max-width: 767px) {
+  .p-headermenu.u-flex {
+    display: block; } }
+
+.p-headermenu li {
+  padding: 0 24px; }
+  .p-headermenu li a {
+    position: relative;
+    display: block; }
+    @media screen and (max-width: 767px) {
+      .p-headermenu li a {
+        font-size: 16px;
+        padding: 20px 0 20px 30px; } }
+    @media screen and (max-width: 767px) {
+      .p-headermenu li a:before {
+        content: '';
+        width: 20px;
+        height: 1px;
+        margin: auto;
+        background: #555;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0; } }
 
 .p-headermenu__subja {
   font-size: 12px;
   padding-left: 8px;
-  display: inline-block;
-}
+  display: inline-block; }
 
 .p-spmenu {
   position: fixed;
   top: 10px;
   right: 15px;
-  z-index: 11;
-}
+  z-index: 11; }
 
 .c-spbtn {
   width: 50px;
   height: 50px;
   background: #fff;
   border-radius: 50%;
-  position: relative;
-}
-
-.c-spbtn span {
-  width: 20px;
-  height: 2px;
-  margin: auto;
-  background: #555;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-}
-
-.c-spbtn span:nth-of-type(1) {
-  -webkit-transform: translate(0, -5px);
-  -ms-transform: translate(0, -5px);
-  transform: translate(0, -5px);
-}
-
-.c-spbtn span:nth-of-type(2) {
-  -webkit-transform: translate(0, 0);
-  -ms-transform: translate(0, 0);
-  transform: translate(0, 0);
-}
-
-.c-spbtn span:nth-of-type(3) {
-  -webkit-transform: translate(0, 5px);
-  -ms-transform: translate(0, 5px);
-  transform: translate(0, 5px);
-}
-
-.c-spbtn.active {
-  border: 1px solid #ef9c9c;
-}
-
-.c-spbtn.active span {
-  background: #ef9c9c;
-}
-
-.c-spbtn.active span:nth-of-type(1) {
-  -webkit-transform: translate(0, 0px) rotate(45deg);
-  -ms-transform: translate(0, 0px) rotate(45deg);
-  transform: translate(0, 0px) rotate(45deg);
-}
-
-.c-spbtn.active span:nth-of-type(2) {
-  -webkit-transform: translate(0px, 0px) scale(0, 1) rotate(0deg);
-  -ms-transform: translate(0px, 0px) scale(0, 1) rotate(0deg);
-  transform: translate(0px, 0px) scale(0, 1) rotate(0deg);
-}
-
-.c-spbtn.active span:nth-of-type(3) {
-  -webkit-transform: translate(0, 0px) rotate(-45deg);
-  -ms-transform: translate(0, 0px) rotate(-45deg);
-  transform: translate(0, 0px) rotate(-45deg);
-}
+  position: relative; }
+  .c-spbtn span {
+    width: 20px;
+    height: 2px;
+    margin: auto;
+    background: #555;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    -webkit-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s; }
+    .c-spbtn span:nth-of-type(1) {
+      -webkit-transform: translate(0, -5px);
+      -ms-transform: translate(0, -5px);
+      transform: translate(0, -5px); }
+    .c-spbtn span:nth-of-type(2) {
+      -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+      transform: translate(0, 0); }
+    .c-spbtn span:nth-of-type(3) {
+      -webkit-transform: translate(0, 5px);
+      -ms-transform: translate(0, 5px);
+      transform: translate(0, 5px); }
+  .c-spbtn.active {
+    border: 1px solid #ef9c9c; }
+    .c-spbtn.active span {
+      background: #ef9c9c; }
+      .c-spbtn.active span:nth-of-type(1) {
+        -webkit-transform: translate(0, 0px) rotate(45deg);
+        -ms-transform: translate(0, 0px) rotate(45deg);
+        transform: translate(0, 0px) rotate(45deg); }
+      .c-spbtn.active span:nth-of-type(2) {
+        -webkit-transform: translate(0px, 0px) scale(0, 1) rotate(0deg);
+        -ms-transform: translate(0px, 0px) scale(0, 1) rotate(0deg);
+        transform: translate(0px, 0px) scale(0, 1) rotate(0deg); }
+      .c-spbtn.active span:nth-of-type(3) {
+        -webkit-transform: translate(0, 0px) rotate(-45deg);
+        -ms-transform: translate(0, 0px) rotate(-45deg);
+        transform: translate(0, 0px) rotate(-45deg); }
 
 @media screen and (max-width: 767px) {
   .c-spheadermenu {
@@ -274,70 +209,50 @@ h3:before {
     -webkit-transition: ease-in-out 0.3s;
     -o-transition: ease-in-out 0.3s;
     transition: ease-in-out 0.3s;
-    opacity: 0;
-  }
-}
+    opacity: 0; } }
 
 .c-spheadermenu__menulogo {
-  margin: 24px 5%;
-}
-
-.c-spheadermenu__menulogo img {
-  width: 75px;
-}
+  margin: 24px 5%; }
+  .c-spheadermenu__menulogo img {
+    width: 75px; }
 
 @media screen and (max-width: 767px) {
   .c-spheadermenu.open {
     opacity: 1;
-    z-index: 10;
-  }
-}
+    z-index: 10; } }
 
 .l-container {
   max-width: 1200px;
   width: 92%;
-  margin: 0 auto;
-}
+  margin: 0 auto; }
 
 @media screen and (max-width: 767px) {
   .u-pc {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media screen and (min-width: 768px) {
   .u-sp {
-    display: none;
-  }
-}
+    display: none; } }
 
 .u-displaynone {
-  display: none;
-}
-
-@media screen and (max-width: 767px) {
-  .u-displaynone__sp {
-    display: none;
-  }
-}
+  display: none; }
+  @media screen and (max-width: 767px) {
+    .u-displaynone__sp {
+      display: none; } }
 
 .u-center {
-  text-align: center;
-}
+  text-align: center; }
 
 .u-displaynone {
-  display: none;
-}
+  display: none; }
 
 .u-flex {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
-}
+  display: flex; }
 
 .u-opensans {
-  font-family: 'Open Sans', sans-serif;
-}
+  font-family: 'Open Sans', sans-serif; }
 
 .c-btn a {
   font-family: 'Open Sans', sans-serif;
@@ -347,121 +262,79 @@ h3:before {
   padding: 30px 0 30px 8px;
   position: relative;
   display: block;
-  overflow: hidden;
-}
-
-.c-btn a:before {
-  content: '';
-  width: 100%;
-  height: 1px;
-  background: #aaa;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
-
-.c-btn a:after {
-  content: '';
-  width: 200px;
-  height: 1px;
-  background: #ef9c9c;
-  position: absolute;
-  left: -201px;
-  bottom: 0;
-  -webkit-transition: ease-in-out 0.3s;
-  -o-transition: ease-in-out 0.3s;
-  transition: ease-in-out 0.3s;
-}
-
-.c-btn a:hover:after {
-  content: '';
-  width: 100%;
-  height: 1px;
-  background: #ef9c9c;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
+  overflow: hidden; }
+  .c-btn a:before {
+    content: '';
+    width: 100%;
+    height: 1px;
+    background: #aaa;
+    position: absolute;
+    left: 0;
+    bottom: 0; }
+  .c-btn a:after {
+    content: '';
+    width: 200px;
+    height: 1px;
+    background: #ef9c9c;
+    position: absolute;
+    left: -201px;
+    bottom: 0;
+    -webkit-transition: ease-in-out 0.3s;
+    -o-transition: ease-in-out 0.3s;
+    transition: ease-in-out 0.3s; }
+  .c-btn a:hover:after {
+    content: '';
+    width: 100%;
+    height: 1px;
+    background: #ef9c9c;
+    position: absolute;
+    left: 0;
+    bottom: 0; }
 
 .l-footer {
   font-family: 'Open Sans', sans-serif;
-  background: #fbf9f8;
-}
-
-.l-footer .l-container {
-  max-width: 94%;
-}
+  background: #fbf9f8; }
+  .l-footer .l-container {
+    max-width: 94%; }
 
 .p-footercontents {
   font-size: 14px;
-  border-top: 1px solid #999;
-}
-
-@media screen and (max-width: 767px) {
-  .p-footercontents__logo {
-    text-align: center;
-  }
-}
-
-.p-footercontents__logo img {
-  width: 75px;
-}
-
-@media screen and (max-width: 767px) {
-  .p-footercontents__menu {
-    width: 80%;
-    margin: 40px auto 0;
-  }
-}
-
-@media screen and (max-width: 550px) {
-  .p-footercontents__menu {
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .p-footercontents__menu.u-flex {
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-  }
-}
-
-.p-footercontents__copyright {
-  font-size: 12px;
-  padding-bottom: 16px;
-}
-
-.p-footercontents a {
-  padding: 0 24px;
-  display: block;
-}
-
-@media screen and (max-width: 450px) {
+  border-top: 1px solid #999; }
+  @media screen and (max-width: 767px) {
+    .p-footercontents__logo {
+      text-align: center; } }
+  .p-footercontents__logo img {
+    width: 75px; }
+  @media screen and (max-width: 767px) {
+    .p-footercontents__menu {
+      width: 80%;
+      margin: 40px auto 0; } }
+  @media screen and (max-width: 550px) {
+    .p-footercontents__menu {
+      width: 100%; } }
+  @media screen and (max-width: 767px) {
+    .p-footercontents__menu.u-flex {
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between; } }
+  .p-footercontents__copyright {
+    font-size: 12px;
+    padding-bottom: 16px; }
   .p-footercontents a {
-    padding: 0 16px;
-  }
-}
-
-@media screen and (max-width: 350px) {
-  .p-footercontents a {
-    padding: 0 8px;
-  }
-}
-
-.p-footercontents .c-contents {
-  padding: 32px 0 24px;
-}
-
-.p-footercontents .c-contents.u-flex {
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-}
-
-@media screen and (max-width: 767px) {
-  .p-footercontents .c-contents.u-flex {
-    display: block;
-  }
-}
+    padding: 0 24px;
+    display: block; }
+    @media screen and (max-width: 450px) {
+      .p-footercontents a {
+        padding: 0 16px; } }
+    @media screen and (max-width: 350px) {
+      .p-footercontents a {
+        padding: 0 8px; } }
+  .p-footercontents .c-contents {
+    padding: 32px 0 24px; }
+    .p-footercontents .c-contents.u-flex {
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between; }
+      @media screen and (max-width: 767px) {
+        .p-footercontents .c-contents.u-flex {
+          display: block; } }
